syntax = "proto3";
package evermint.cpc.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/EscanBE/evermint/x/cpc/types";

// GenesisState defines the module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];

  // deploy_erc20_native defines if the module should deploy the ERC20 contract for native coin.
  // The denom of the native coin is the same as staking denom.
  bool deploy_erc20_native = 2;

  // deploy_staking_contract defines if the module should deploy the staking contract.
  bool deploy_staking_contract = 3;
}

// Params defines the cpc module params
message Params {
  // protocol_version is the protocol version of the cpc module
  uint32 protocol_version = 1;

  // whitelisted_deployers is the address of the accounts permitted to deploy the Custom Precompiled Contracts
  repeated string whitelisted_deployers = 2;
}